# decentralized-estate-management-system

./: Anchor.toml  package-lock.json  package.json
programs/decentralized-estate-management-system/: Cargo.toml
programs/decentralized-estate-management-system/src/: context.rs  error.rs  lib.rs  state.rs
programs/decentralized-estate-management-system/src/context/: deposit.rs  estate.rs  initialize.rs  poll.rs  resident.rs  transaction.rs  vote.rs
programs/decentralized-estate-management-system/src/state/: estate.rs  poll.rs  resident.rs  transaction.rs  vote.rs
tests/: decentralized-estate-management-system.ts
